data/derived/comb/progs/unify/prog2106.ml.out
Characters 281-282:
  | Average(e1,e2)            -> ((eval (e1,x,y))+.(eval (e2,x,y)))/.2
                                                                     ^
Error: This expression has type int but an expression was expected of type
         float
